@@ -6,91 +6,64 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNotSame;
 import static org.junit.Assert.assertTrue;
 
-import java.time.LocalDateTime;
-import java.time.ZoneOffset;
 import java.util.Collections;
-import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import org.hl7.fhir.r4.model.BooleanType;
 import org.hl7.fhir.r4.model.Bundle;
-import org.hl7.fhir.r4.model.Enumerations;
 import org.hl7.fhir.r4.model.Organization;
 import org.hl7.fhir.r4.model.Questionnaire;
 import org.hl7.fhir.r4.model.QuestionnaireResponse;
 import org.hl7.fhir.r4.model.QuestionnaireResponse.QuestionnaireResponseStatus;
-import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.StringType;
-import org.hl7.fhir.r4.model.Type;
 import org.junit.Test;
 
 import dev.dsf.fhir.authentication.OrganizationProvider;
 import dev.dsf.fhir.dao.QuestionnaireDao;
 import dev.dsf.fhir.dao.QuestionnaireResponseDao;
-import jakarta.ws.rs.WebApplicationException;
-import jakarta.ws.rs.core.Response.Status;
 
-public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTest
+public class QuestionnaireResponseIntegrationTest extends AbstractQuestionnaireIntegrationTest
 {
-	private static final String CODESYSTEM_DSF_BPMN_USER_TASK_VALUE_USER_TASK_ID = "user-task-id";
-
-	private static final Date AUTHORED = Date
-			.from(LocalDateTime.parse("2022-01-01T00:00:00").toInstant(ZoneOffset.UTC));
-	private static final String QUESTIONNAIRE_URL = "http://dsf.dev/fhir/Questionnaire/userTask/foo";
-	private static final String QUESTIONNAIRE_VERSION = "1.0.0";
-	private static final String QUESTIONNAIRE = QUESTIONNAIRE_URL + "|" + QUESTIONNAIRE_VERSION;
-	private static final QuestionnaireResponse.QuestionnaireResponseStatus STATUS = QuestionnaireResponse.QuestionnaireResponseStatus.INPROGRESS;
-
 	@Test
 	public void testCreateValidByLocalUser() throws Exception
 	{
-		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
+		Questionnaire questionnaire = createQuestionnaireProfileVersion100();
+		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
+		questionnaireDao.create(questionnaire);
 
+		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
 		QuestionnaireResponse created = getWebserviceClient().create(questionnaireResponse);
+
 		assertNotNull(created);
 		assertNotNull(created.getIdElement().getIdPart());
 		assertNotNull(created.getIdElement().getVersionIdPart());
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testCreateNotAllowedByLocalUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
 		questionnaireResponse.setStatus(QuestionnaireResponseStatus.COMPLETED);
 
-		try
-		{
-			getWebserviceClient().create(questionnaireResponse);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getWebserviceClient().create(questionnaireResponse));
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testCreateNotAllowedByRemoteUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
 
-		try
-		{
-			getExternalWebserviceClient().create(questionnaireResponse);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getExternalWebserviceClient().create(questionnaireResponse));
 	}
 
 	@Test
 	public void testUpdateAllowedByLocalUser() throws Exception
 	{
+		Questionnaire questionnaire = createQuestionnaireProfileVersion100();
+		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
+		questionnaireDao.create(questionnaire);
+
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
 		QuestionnaireResponseDao questionnaireResponseDao = getSpringWebApplicationContext()
 				.getBean(QuestionnaireResponseDao.class);
@@ -106,7 +79,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		assertEquals("2", updated.getIdElement().getVersionIdPart());
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testUpdateNotAllowedByLocalUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -114,19 +87,11 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 				.getBean(QuestionnaireResponseDao.class);
 		QuestionnaireResponse created = questionnaireResponseDao.create(questionnaireResponse);
 
-		try
-		{
-			getWebserviceClient().update(created);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getWebserviceClient().update(created));
 	}
 
-	@Test(expected = WebApplicationException.class)
-	public void testUpdateNotAllowedByLocalUserNowUserTaskId() throws Exception
+	@Test
+	public void testUpdateNotAllowedByLocalUserNoUserTaskId() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
 		QuestionnaireResponseDao questionnaireResponseDao = getSpringWebApplicationContext()
@@ -136,18 +101,10 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		created.setStatus(QuestionnaireResponseStatus.STOPPED);
 		created.getItem().clear();
 
-		try
-		{
-			getWebserviceClient().update(created);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getWebserviceClient().update(created));
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testUpdateNotAllowedByLocalUserChangedUserTaskId() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -157,21 +114,14 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 
 		created.setStatus(QuestionnaireResponseStatus.STOPPED);
 		created.getItem().clear();
-		addItem(created, CODESYSTEM_DSF_BPMN_USER_TASK_VALUE_USER_TASK_ID, "UserTask ID",
+
+		addItem(created, QUESTIONNAIRE_ITEM_USER_TASK_ID_LINK, QUESTIONNAIRE_ITEM_USER_TASK_ID_TEXT,
 				new StringType(UUID.randomUUID().toString()));
 
-		try
-		{
-			getWebserviceClient().update(created);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getWebserviceClient().update(created));
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testSecondUpdateNotAllowedByLocalUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -181,18 +131,10 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		created.setStatus(QuestionnaireResponseStatus.COMPLETED);
 		QuestionnaireResponse updated = questionnaireResponseDao.update(created);
 
-		try
-		{
-			getWebserviceClient().update(updated);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getWebserviceClient().update(updated));
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testUpdateNotAllowedByRemoteUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -201,15 +143,8 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		QuestionnaireResponse created = questionnaireResponseDao.create(questionnaireResponse);
 
 		created.setStatus(QuestionnaireResponseStatus.COMPLETED);
-		try
-		{
-			getExternalWebserviceClient().update(created);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+
+		expectForbidden(() -> getExternalWebserviceClient().update(created));
 	}
 
 	@Test
@@ -232,23 +167,19 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		QuestionnaireResponse searchQuestionnaireResponse = (QuestionnaireResponse) searchBundle.getEntry().get(0)
 				.getResource();
 		assertTrue(searchQuestionnaireResponse.hasAuthored());
-		assertEquals(0, AUTHORED.compareTo(searchQuestionnaireResponse.getAuthored()));
+		assertEquals(0, QUESTIONNAIRE_RESPONSE_DATE.compareTo(searchQuestionnaireResponse.getAuthored()));
 	}
 
 	@Test
 	public void testSearchByIdentifier() throws Exception
 	{
-		final String value = UUID.randomUUID().toString();
-		final String system = "http://foo/fhir/sid/Test";
-
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
-		questionnaireResponse.getIdentifier().setSystem(system).setValue(value);
 		QuestionnaireResponseDao questionnaireResponseDao = getSpringWebApplicationContext()
 				.getBean(QuestionnaireResponseDao.class);
 		questionnaireResponseDao.create(questionnaireResponse);
 
 		Bundle searchBundle = getWebserviceClient().search(QuestionnaireResponse.class,
-				Map.of("identifier", Collections.singletonList(system + "|" + value)));
+				Map.of("identifier", Collections.singletonList(TEST_IDENTIFIER_SYSTEM + "|" + TEST_IDENTIFIER_VALUE)));
 
 		assertNotNull(searchBundle.getEntry());
 		assertEquals(1, searchBundle.getEntry().size());
@@ -259,22 +190,20 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		QuestionnaireResponse foundQuestionnaireResponse = (QuestionnaireResponse) searchBundle.getEntry().get(0)
 				.getResource();
 		assertTrue(foundQuestionnaireResponse.hasIdentifier());
+		assertEquals(TEST_IDENTIFIER_SYSTEM, foundQuestionnaireResponse.getIdentifier().getSystem());
+		assertEquals(TEST_IDENTIFIER_VALUE, foundQuestionnaireResponse.getIdentifier().getValue());
 	}
 
 	@Test
 	public void testSearchByIdentifierRemoteUser() throws Exception
 	{
-		final String value = UUID.randomUUID().toString();
-		final String system = "http://foo/fhir/sid/Test";
-
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
-		questionnaireResponse.getIdentifier().setSystem(system).setValue(value);
 		QuestionnaireResponseDao questionnaireResponseDao = getSpringWebApplicationContext()
 				.getBean(QuestionnaireResponseDao.class);
 		questionnaireResponseDao.create(questionnaireResponse);
 
 		Bundle searchBundle = getExternalWebserviceClient().search(QuestionnaireResponse.class,
-				Map.of("identifier", Collections.singletonList(system + "|" + value)));
+				Map.of("identifier", Collections.singletonList(TEST_IDENTIFIER_SYSTEM + "|" + TEST_IDENTIFIER_VALUE)));
 
 		assertNotNull(searchBundle.getEntry());
 		assertEquals(0, searchBundle.getEntry().size());
@@ -283,7 +212,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 	@Test
 	public void testSearchByQuestionnaireWithVersion() throws Exception
 	{
-		testSearchByQuestionnaire(QUESTIONNAIRE);
+		testSearchByQuestionnaire(QUESTIONNAIRE_URL_VERSION);
 	}
 
 	@Test
@@ -294,7 +223,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 
 	private void testSearchByQuestionnaire(String questionnaireUrl) throws Exception
 	{
-		Questionnaire questionnaire = createQuestionnaire();
+		Questionnaire questionnaire = createQuestionnaireProfileVersion100();
 		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
 		questionnaireDao.create(questionnaire);
 
@@ -316,7 +245,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		QuestionnaireResponse searchQuestionnaireResponse = (QuestionnaireResponse) searchBundle.getEntry().get(0)
 				.getResource();
 		assertTrue(searchQuestionnaireResponse.hasQuestionnaire());
-		assertEquals(QUESTIONNAIRE, searchQuestionnaireResponse.getQuestionnaire());
+		assertEquals(QUESTIONNAIRE_URL_VERSION, searchQuestionnaireResponse.getQuestionnaire());
 
 		assertNotNull(searchBundle.getEntry().get(1));
 		assertNotNull(searchBundle.getEntry().get(1).getResource());
@@ -332,7 +261,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 	@Test
 	public void testSearchByQuestionnaireNoVersion() throws Exception
 	{
-		Questionnaire questionnaire = createQuestionnaire().setVersion(null);
+		Questionnaire questionnaire = createQuestionnaireProfileVersion100().setVersion(null);
 		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
 		questionnaireDao.create(questionnaire);
 
@@ -371,16 +300,16 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 	{
 		QuestionnaireDao questionnaireDao = getSpringWebApplicationContext().getBean(QuestionnaireDao.class);
 
-		Questionnaire questionnaire1 = createQuestionnaire().setVersion("0.1.0");
+		Questionnaire questionnaire1 = createQuestionnaireProfileVersion100().setVersion("0.1.0");
 		questionnaireDao.create(questionnaire1);
 
-		Questionnaire questionnaire2 = createQuestionnaire();
+		Questionnaire questionnaire2 = createQuestionnaireProfileVersion100();
 		questionnaireDao.create(questionnaire2);
 
-		Questionnaire questionnaire3 = createQuestionnaire().setVersion("0.2.0");
+		Questionnaire questionnaire3 = createQuestionnaireProfileVersion100().setVersion("0.2.0");
 		questionnaireDao.create(questionnaire3);
 
-		Questionnaire questionnaire4 = createQuestionnaire().setVersion(null);
+		Questionnaire questionnaire4 = createQuestionnaireProfileVersion100().setVersion(null);
 		questionnaireDao.create(questionnaire4);
 
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -401,7 +330,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		QuestionnaireResponse searchQuestionnaireResponse = (QuestionnaireResponse) searchBundle.getEntry().get(0)
 				.getResource();
 		assertTrue(searchQuestionnaireResponse.hasQuestionnaire());
-		assertEquals(QUESTIONNAIRE, searchQuestionnaireResponse.getQuestionnaire());
+		assertEquals(QUESTIONNAIRE_URL_VERSION, searchQuestionnaireResponse.getQuestionnaire());
 
 		assertNotNull(searchBundle.getEntry().get(1));
 		assertNotNull(searchBundle.getEntry().get(1).getResource());
@@ -425,7 +354,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		questionnaireResponseDao.create(questionnaireResponse);
 
 		Bundle searchBundle = getWebserviceClient().search(QuestionnaireResponse.class,
-				Map.of("status", Collections.singletonList(STATUS.toCode())));
+				Map.of("status", Collections.singletonList(QUESTIONNAIRE_RESPONSE_STATUS.toCode())));
 
 		assertNotNull(searchBundle.getEntry());
 		assertEquals(1, searchBundle.getEntry().size());
@@ -436,7 +365,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		QuestionnaireResponse searchQuestionnaireResponse = (QuestionnaireResponse) searchBundle.getEntry().get(0)
 				.getResource();
 		assertTrue(searchQuestionnaireResponse.hasStatus());
-		assertEquals(STATUS, searchQuestionnaireResponse.getStatus());
+		assertEquals(QUESTIONNAIRE_RESPONSE_STATUS, searchQuestionnaireResponse.getStatus());
 	}
 
 	@Test
@@ -449,9 +378,9 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 
 		OrganizationProvider organizationProvider = getSpringWebApplicationContext()
 				.getBean(OrganizationProvider.class);
-		Organization organization = organizationProvider.getLocalOrganization().get();
+		Organization localOrganization = organizationProvider.getLocalOrganization().get();
+		String organizationReference = "Organization/" + localOrganization.getIdElement().getIdPart();
 
-		String organizationReference = "Organization/" + organization.getIdElement().getIdPart();
 		Bundle searchBundle = getWebserviceClient().search(QuestionnaireResponse.class,
 				Map.of("subject", Collections.singletonList(organizationReference), "_include",
 						Collections.singletonList("QuestionnaireResponse:subject:Organization")));
@@ -472,57 +401,10 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		assertTrue(searchBundle.getEntry().get(1).getResource() instanceof Organization);
 
 		Organization searchOrganization = (Organization) searchBundle.getEntry().get(1).getResource();
-		assertEquals(organization.getIdentifierFirstRep().getSystem(),
+		assertEquals(localOrganization.getIdentifierFirstRep().getSystem(),
 				searchOrganization.getIdentifierFirstRep().getSystem());
-		assertEquals(organization.getIdentifierFirstRep().getValue(),
+		assertEquals(localOrganization.getIdentifierFirstRep().getValue(),
 				searchOrganization.getIdentifierFirstRep().getValue());
-	}
-
-	private Questionnaire createQuestionnaire()
-	{
-		Questionnaire questionnaire = new Questionnaire();
-		questionnaire.getMeta().addTag().setSystem("http://dsf.dev/fhir/CodeSystem/read-access-tag").setCode("ALL");
-
-		questionnaire.setUrl(QUESTIONNAIRE_URL);
-		questionnaire.setVersion(QUESTIONNAIRE_VERSION);
-
-		questionnaire.setStatus(Enumerations.PublicationStatus.ACTIVE);
-
-		questionnaire.addItem().setLinkId("foo").setText("Approve?")
-				.setType(Questionnaire.QuestionnaireItemType.BOOLEAN).addInitial().setValue(new BooleanType(false));
-
-		return questionnaire;
-	}
-
-	private QuestionnaireResponse createQuestionnaireResponse()
-	{
-		OrganizationProvider organizationProvider = getSpringWebApplicationContext()
-				.getBean(OrganizationProvider.class);
-		assertNotNull(organizationProvider);
-
-		QuestionnaireResponse questionnaireResponse = new QuestionnaireResponse();
-
-		questionnaireResponse.setQuestionnaire(QUESTIONNAIRE);
-
-		questionnaireResponse.setStatus(STATUS);
-		questionnaireResponse.setAuthored(AUTHORED);
-
-		String organizationReference = "Organization/"
-				+ organizationProvider.getLocalOrganization().get().getIdElement().getIdPart();
-		questionnaireResponse.setSubject(new Reference(organizationReference));
-
-		addItem(questionnaireResponse, CODESYSTEM_DSF_BPMN_USER_TASK_VALUE_USER_TASK_ID, "UserTask ID",
-				new StringType(UUID.randomUUID().toString()));
-
-		return questionnaireResponse;
-	}
-
-	private void addItem(QuestionnaireResponse questionnaireResponse, String linkId, String text, Type answer)
-	{
-		List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answerComponent = Collections
-				.singletonList(new QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent().setValue(answer));
-
-		questionnaireResponse.addItem().setLinkId(linkId).setText(text).setAnswer(answerComponent);
 	}
 
 	@Test
@@ -536,7 +418,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		getWebserviceClient().delete(QuestionnaireResponse.class, created.getIdElement().getIdPart());
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testDeleteNotAllowedByRemoteUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -544,15 +426,8 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 				.getBean(QuestionnaireResponseDao.class);
 		QuestionnaireResponse created = questionnaireResponseDao.create(questionnaireResponse);
 
-		try
-		{
-			getExternalWebserviceClient().delete(QuestionnaireResponse.class, created.getIdElement().getIdPart());
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getExternalWebserviceClient().delete(QuestionnaireResponse.class,
+				created.getIdElement().getIdPart()));
 	}
 
 	@Test
@@ -573,7 +448,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		assertEquals("1", read.getIdElement().getVersionIdPart());
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testReadNotAllowedByRemoteUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -581,18 +456,11 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 				.getBean(QuestionnaireResponseDao.class);
 		QuestionnaireResponse created = questionnaireResponseDao.create(questionnaireResponse);
 
-		try
-		{
-			getExternalWebserviceClient().read(QuestionnaireResponse.class, created.getIdElement().getIdPart());
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getExternalWebserviceClient().read(QuestionnaireResponse.class,
+				created.getIdElement().getIdPart()));
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testReadNotAllowedByRemoteUserWithVersion() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -600,16 +468,8 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 				.getBean(QuestionnaireResponseDao.class);
 		QuestionnaireResponse created = questionnaireResponseDao.create(questionnaireResponse);
 
-		try
-		{
-			getExternalWebserviceClient().read(QuestionnaireResponse.class, created.getIdElement().getIdPart(),
-					created.getIdElement().getVersionIdPart());
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getExternalWebserviceClient().read(QuestionnaireResponse.class,
+				created.getIdElement().getIdPart(), created.getIdElement().getVersionIdPart()));
 	}
 
 	@Test
@@ -625,7 +485,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		assertTrue(created == read);
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testNotModifiedCheckNotAllowedByRemoteUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -633,15 +493,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 				.getBean(QuestionnaireResponseDao.class);
 		QuestionnaireResponse created = questionnaireResponseDao.create(questionnaireResponse);
 
-		try
-		{
-			getExternalWebserviceClient().read(created);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getExternalWebserviceClient().read(created));
 	}
 
 	@Test
@@ -661,7 +513,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		assertEquals("2", read.getIdElement().getVersionIdPart());
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testNotModifiedCheckNotAllowedByRemoteUserWithModification() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -671,15 +523,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		QuestionnaireResponse updated = questionnaireResponseDao.update(created);
 		assertEquals("2", updated.getIdElement().getVersionIdPart());
 
-		try
-		{
-			getExternalWebserviceClient().read(created);
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getExternalWebserviceClient().read(created));
 	}
 
 	@Test
@@ -712,7 +556,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 
 		List<QuestionnaireResponse> qrFromBundle = historyBundle3.getEntry().stream()
 				.filter(e -> e.hasResource() && e.getResource() instanceof QuestionnaireResponse)
-				.map(e -> (QuestionnaireResponse) e.getResource()).collect(Collectors.toList());
+				.map(e -> (QuestionnaireResponse) e.getResource()).toList();
 
 		assertEquals(1, qrFromBundle.size());
 		assertNotNull(qrFromBundle.get(0));
@@ -743,7 +587,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 
 		List<QuestionnaireResponse> qrFromBundle = historyBundle3.getEntry().stream()
 				.filter(e -> e.hasResource() && e.getResource() instanceof QuestionnaireResponse)
-				.map(e -> (QuestionnaireResponse) e.getResource()).collect(Collectors.toList());
+				.map(e -> (QuestionnaireResponse) e.getResource()).toList();
 
 		assertEquals(0, qrFromBundle.size());
 	}
@@ -760,7 +604,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		getWebserviceClient().deletePermanently(QuestionnaireResponse.class, created.getIdElement().getIdPart());
 	}
 
-	@Test(expected = WebApplicationException.class)
+	@Test
 	public void testDeletePermanentlyNotAllowedByRemoteUser() throws Exception
 	{
 		QuestionnaireResponse questionnaireResponse = createQuestionnaireResponse();
@@ -769,15 +613,7 @@ public class QuestionnaireResponseIntegrationTest extends AbstractIntegrationTes
 		QuestionnaireResponse created = questionnaireResponseDao.create(questionnaireResponse);
 		questionnaireResponseDao.delete(UUID.fromString(created.getIdElement().getIdPart()));
 
-		try
-		{
-			getExternalWebserviceClient().deletePermanently(QuestionnaireResponse.class,
-					created.getIdElement().getIdPart());
-		}
-		catch (WebApplicationException e)
-		{
-			assertEquals(Status.FORBIDDEN.getStatusCode(), e.getResponse().getStatus());
-			throw e;
-		}
+		expectForbidden(() -> getExternalWebserviceClient().deletePermanently(QuestionnaireResponse.class,
+				created.getIdElement().getIdPart()));
 	}
 }
